[package]
name = "dfint_hook"
version = "0.2.1"
edition = "2021"

[lib]
name = "dfint_hook"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
macro = { path = "src/macro" }
retour = { version = "0.3.1", features = ["static-detour"] }
log = "0.4.26"
simple-logging = "2.0.2"
regex = "1.11.1"
toml = "0.8.20"
backtrace = "0.3.73"
chrono = "0.4.39"
serde_derive = "1.0.201"
serde = "1.0.218"
static_init = "1.0.3"
dlopen2 = "0.7.0"
anyhow = "1.0.96"
device_query = "3.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
exe = "0.5.6"
winapi = { version = "^0.3.9", features = [
  "minwindef",
  "winnt",
  "libloaderapi",
  "windef",
  "winuser",
] }

[target.'cfg(target_os = "linux")'.dependencies]
checksum = "0.2.1"
